# Cursor_Test

./: .env.example  .gitignore  Makefile  docker-compose.yml  install.sh  start.sh  stop.sh  update.sh  使用说明.md
.cursor/plans/: 第二大脑系统_ba0d14be.plan.md
.cursor/rules/: dierdanao-project.mdc
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  entities.py  graph.py  history.py  review.py  search.py  settings_api.py  sync.py  tags.py  upload.py  version.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/chat/: agent_runner.py  agent_tools.py  conversation.py  rag_pipeline.py
backend/app/models/: entity.py  review.py  tag.py  user.py
backend/app/services/: embedding_service.py  entity_extractor.py  file_processor.py  llm_service.py  review_service.py  tag_engine.py
backend/app/storage/: milvus_client.py  neo4j_client.py  sqlite_client.py
backend/app/sync/: apple_calendar.py  apple_common.py  apple_notes.py  apple_reminders.py  ingest_pipeline.py  messages.py  obsidian_writer.py  scheduler.py
backend/config/: system_config.yaml  user_config.example.yaml
backend/scripts/: init_db.py  test_openai_key.py
docs/: 上下文总结_新对话接续用.md  功能清单与待办.md  在另一台Mac上完整安装.md  待办计划.md  数据流与优化说明.md  计划执行记录.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
obsidian-plugin/: esbuild.config.mjs  main.js  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: api.ts  chat-view.ts  review-view.ts  search-modal.ts  settings.ts
(+13 files in other folders)
